# olmoearth_pretrain

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  beaker_config_example.yaml  convert_List_to_list.py  olmo_core_proto.py  pyproject.toml  requirements-beaker.txt  requirements-dev.txt  requirements-eval.txt  requirements.txt
.github/workflows/: labeler.yaml  lint.yaml  tests.yaml
data/norm_configs/: computed.json  predefined.json
data/rslearn_dataset_configs/: config_cdl.json  config_era5.json  config_google_satembedding.json  config_landsat.json  config_naip.json  config_naip_10.json  config_openstreetmap.json  config_sentinel1.json  config_sentinel2.json  config_sentinel2_l2a.json  config_worldcereal.json  config_worldcover.json
docs/: Evaluation.md  Inference-Quickstart.md  Pretraining-Dataset.md  Pretraining.md  Setup-Internal.md
helios/: __init__.py  constants.py  latent_predictor.py  olmo_core_proto.py  types.py
helios/data/: __init__.py  collator.py  concat.py  constants.py  data_source_io.py  dataloader.py  dataset.py  index.py  masking.py  normalize.py  olmo_core_proto.py  schemas.py  transform.py  utils.py  visualize.py
helios/dataset/: __init__.py  const.py  convert_to_h5py.py  index.py  make_index.py  make_meta_summary.py  parse.py  sample.py  schemas.py  util.py  utils.py
helios/dataset_creation/: README.md  constants.py  make_meta_summary.py  util.py
helios/evals/: __init__.py  embeddings.py  eval_wrapper.py  finetune.py  knn.py  linear_probe.py
helios/inference_benchmarking/: data_models.py  run_throughput_benchmark.py
helios/internal/: __init__.py  all_evals.py  common.py  experiment.py  full_eval_sweep.py  full_eval_sweep_finetune.py  override_examples.md  run_h5_conversion.py  utils.py
helios/model/: decoder.py  encoder.py
helios/nn/: __init__.py  attention.py  encodings.py  flexi_patch_embed.py  flexihelios.py  galileo.py  latent_mim.py  latent_predictor.py  mae.py  model.py  pooled_modality_predictor.py  st_model.py  utils.py
helios/train/: loss.py  masking.py  model.py  scheduler.py  train_module.py  utils.py
olmoearth_pretrain/: decorators.py  model_loader.py
olmoearth_pretrain/data/: dataset.py
olmoearth_pretrain/dataset_creation/: README.md  internal_docs.md
olmoearth_pretrain/evals/: eval_wrapper.py  finetune.py
olmoearth_pretrain/inference_benchmarking/: run_throughput_benchmark.py
olmoearth_pretrain/internal/: all_evals.py  common.py  experiment.py  full_eval_sweep.py  full_eval_sweep_finetune.py  utils.py
olmoearth_pretrain/nn/: flexi_vit.py  mae.py  pooled_modality_predictor.py  st_model.py
olmoearth_pretrain/train/: loss.py  masking.py
scripts/: 20250122_worldcover_sampling.py  20250731_gse_knn_hack.py  2025_10_27_finetune.sh  check_token_budget.py  compute_eval_dataset_minmax.py  gal_mae_big.py  galileo.py  get_max_eval_metrics_from_wandb.py  h5_compression.py  latent_mim.py
scripts/2025_04_09_multidataset/: sweep.py  train.py
scripts/2025_04_10_modality_masking/: train.py  train_base.py  train_multidataset.py  train_multidataset_base.py  train_multidataset_base_decodeless.py  train_multidataset_base_newmasking.py  train_multidataset_newmasking.py  train_orig.py  train_orig_base.py
scripts/2025_04_15_random_range/: shared.py  train_modality1.py  train_old.py  train_randspace1.py  train_randspace2.py  train_range1.py  train_range2.py  train_range3.py  train_range4.py  train_range5.py  train_range6.py  train_range7.py
scripts/2025_04_18_galileo_contrastive/: galileo.py  galileo_base.py  sweep_galileo.py  sweep_galileo_contrastive.py
scripts/2025_04_22_st_model/: shared.py  train.py  train_augusta.py  train_baseline_osmonly.py  train_baseline_randspace.py  train_budget3000_randspace.py  train_budget6000.py  train_budget6000_randspace.py  train_budget6000hwp20.py  train_budget6000hwp20_randspace.py  train_decdepth10.py  train_decdepth12size384.py  train_decdepth4.py  train_decdepth6.py  train_decdepth8.py  train_decdepth8size384.py  train_encdepth24.py  train_encdepth24_budget3000.py  train_encdepth24_budget6000.py  train_large.py  train_osmonly.py  train_osmonly_fsdp.py  train_ps4.py  train_randspace.py
scripts/2025_04_23_benchmarking_ladder/: base_galileo_max.py  base_galileo_weka.py  gbs_sweep.py  modality_sweep.py  sweep_lr_depth_ladder.py
scripts/2025_05_02_randomness/: galileo_random_base.py  galileo_vs_contrastive_random_variation.py
scripts/2025_05_02_st_model/: galileo.py  galileo_budget6000.py  galileo_budget6000hwp20.py  galileo_budget9000hwp20.py  galileo_decoder8.py  galileo_shared.py  shared.py  train_baseline.py  train_budget12000hwp20.py  train_budget3000.py  train_budget4500.py  train_budget9000hwp20.py  train_large_budget3000.py  train_large_budget6000.py  train_ps2.py
scripts/2025_05_05_bigdata/: galileo_baseline.py  galileo_baseline2.py  galileo_baseline2_osm.py  galileo_baseline2_osm_osmbig.py  galileo_baseline2_presto_osm.py  galileo_baseline_large.py  galileo_large.py  galileo_shared.py  shared.py  train_baseline_large.py  train_budget6000.py  train_large.py  train_large_budget6000.py
scripts/2025_05_13_mae/: galileo_contrastive_mae.py
scripts/2025_05_20_windowed_attention/: shared.py
scripts/2025_06_02_modality_investigation/: shared.py
scripts/2025_06_10_cross_masking_investigation/: cross_masking.sh  eval.py  eval_sweep.py  latent_mim_128_cross.py
scripts/2025_06_23_naip/: eval.py  eval_alldata.py  eval_attentive_probing.py  eval_sweep.py  train.py  train_alldata.py
scripts/2025_06_26_dataset_percentage_experiments/: dataset_percentages.sh  dataset_percentages_v2.sh  eval.py  eval_sweep.py  latent_mim_all_data.py
scripts/2025_07_10_no_map_ssl/: mask_ratio_sweeps.py  train_cross_random.py  train_pooled_encoder.py
scripts/2025_07_21_add_era5/: latent_mim_add_era5.py
scripts/joe/: gal.sh  (+3 more)
tests/: __init__.py  conftest.py
(+346 files in other folders)
