[project]
name = "helios"
version = "0.0.1"
description = "A library for developing earth system foundation models"
authors = [
    {name = "Favyen Bastani", email = "favyenb@allenai.org"},
    {name = "Patrick Beukema", email = "patrickb@allenai.org"},
    {name = "Henry Herzog", email = "henryh@allenai.org"},
    {name = "Gabriel Tseng", email = "gabrielt@allenai.org"},
    {name = "Yawen Zhang", email = "yawenz@allenai.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.12"

dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["helios*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dataset_creation = { file = ["requirements_dataset_creation.txt"] }
dev = { file = ["requirements-dev.txt"] }
eval = { file = ["requirements-eval.txt"] }
beaker = { file = ["requirements-beaker.txt"] }
all = { file = ["requirements.txt", "requirements-dev.txt", "requirements-eval.txt"] }

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.lint.per-file-ignores]
"helios/evals/datasets/cropharvest_package/*" = ["D"]
