[project]
name = "olmoearth_pretrain"
version = "0.0.1"
description = "A library for developing earth system foundation models"
authors = [
    {name = "Favyen Bastani", email = "favyenb@allenai.org"},
    {name = "Patrick Beukema", email = "patrickb@allenai.org"},
    {name = "Henry Herzog", email = "henryh@allenai.org"},
    {name = "Gabriel Tseng", email = "gabrielt@allenai.org"},
    {name = "Yawen Zhang", email = "yawenz@allenai.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "ai2-olmo-core",
    "albumentations>=1.4.10",
    "cartopy>=0.25.0",
    "class-registry>=2.1.2",
    "einops>=0.7.0",
    "gcsfs>=2025.9.0",
    "hdf5plugin>=6.0.0",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "pandas>=2.2",
    "psutil>=7.1.1",
    "rasterio>=1.4.3",
    "shapely>=2",
    "torch>=2.7,<2.8",
    "torchvision>=0.22.1",
    "universal-pathlib>=0.2.5",
    "wandb>=0.19.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["olmoearth_pretrain*", "helios*"]

[tool.setuptools.package-data]
"olmoearth_pretrain.data.norm_configs" = ["*.json"]
"olmoearth_pretrain.evals.datasets.config" = ["*.json"]

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
]

[tool.uv.sources]
claymodel = { git = "https://github.com/Clay-foundation/model.git" }
geobench = { git = "https://github.com/ServiceNow/geo-bench.git" }
ai2-olmo-core = { git = "https://github.com/allenai/OLMo-core.git", rev = "abc12e50ba756c21e575452cfc6f150dafa9509e" }
rslearn = { git = "https://github.com/allenai/rslearn.git", rev = "master" }

[dependency-groups]
beaker = [
    "beaker-py==1.34.1",
    "docker>=5.0,<8.0",
    "packaging>=24.2",
    "pydantic>=1.8.2,<3.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=12.3,<14.0",
]
dataset-creation = [
    "class-registry>=2.1.2",
    "einops==0.7.0",
    "gcsfs>=2025.9.0",
    "geobench>=1.0.1",
    "interrogate>=1.7.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pandera>=0.26.1",
    "pytest>=8.4.2",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "rslearn",
    "torch>=2.5",
    "universal-pathlib>=0.2.5",
    "wandb>=0.19.0",
]
dev = [
    "pip>=25.2",
    "gitpython>=3.0,<4.0",
    "interrogate>=1.7.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.1",
]
eval = [
    "albumentations>=1.4.10",
    "breizhcrops==0.0.4.1",
    "claymodel",
    "geobench",
    "geopandas>=1.1.1",
    "pytorch-lightning==2.5.5",
    "pyyaml>=6.0",
    "rioxarray>=0.19.0",
    "rslearn",
    "satlaspretrain-models>=0.3.1",
    "scikit-learn>=1.7.2",
    "terratorch==1.1",
    "timm==1.0.20",
    "torchmetrics==1.7.1",
    "xarray>=2025.10.1",
]

[tool.ruff.lint.per-file-ignores]
"olmoearth_pretrain/evals/datasets/cropharvest_package/*" = ["D"]
"olmoearth_pretrain/evals/models/copernicusfm/src/*" = ["D", "UP", "E", "F"]
